syntax = "proto3";

package auth;

option go_package = "./common/auth";

import "google/api/annotations.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/register"
      body:"user"
  };}
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/login"
        body: "userData"
    };
  }
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// Register

message RegisterRequest {
  UserData user=1;
}

message UserData{
  string username = 1;
  string password = 2;
}
message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  UserData userData = 1;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
  string username=4;
  string role=5;
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string userId = 3;
}